# mooneazy

./: main.py  mooneazy.py  mooneazy.spec  pyproject.toml  script.py  testnet.py
alerts/: main.py  pyproject.toml  sounds.py
appwrite_api/: main.py  pyproject.toml
backtesting/: breakout_util.py  breakouts.py  main.py
breakout_strategy/: main.py  pyproject.toml  testnet.py
breakout_strategy/breakout_strategy/: breakout.py  breakouts.py  config.py  emas.py  hma.py  htf_trend.py  setups.py  signals.py  trading.py  util.py
breakout_strategy/tests/: test_breakout.py  test_htf_trend.py  test_indicators.py
candles_api/: main.py  pyproject.toml
candles_api/candles_api/: api.py  api_errors.py  binance.py  config.py  yahoo.py
pullback_strategy/: main.py  pyproject.toml  requirements.txt
pullback_strategy/pullback_strategy/: config.py  emas.py  fakeouts.py  (+7 more)
pullback_strategy/pullback_strategy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
range_strategy/: main.py  pyproject.toml
scripts/: analysis.py  config.py  htf_trend.py  main.py  pyproject.toml  scalper.py  util.py
scripts/scripts/: analysis.py  config.py
ultimate_setups/: .gitignore  main.py  pyproject.toml  requi.md  test.py  testnet.py
ultimate_setups/tests/: test_ultimate_setup.py
ultimate_setups/tests/test_data/: setup_data.py
ultimate_setups/ultimate_setups/: __init__.py  config.py  setups.py  signals.py
ultimate_setups/ultimate_setups.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ultimate_setups/ultimate_setups/core/: __init__.py  apirequests.py  base_candle.py  charting.py  fakeouts.py  indicators.py  levels.py  reactions.py  settings.py  trading.py  util.py
ultimate_setups/ultimate_setups/strategies/: __init__.py  helpers.py  ultimate_setups.py
ultimate_setups/ultimate_setups/tests/: test_ultimate_setup.py
(+14 files in other folders)
