[project]
name = "ultimate-setups"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "candles-api",
    "pytest>=9.0.3",
    "betterplaysound"
]


[tool.uv.sources]
candles-api = { path = "../candles_api", editable = true }



